--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/signup.css">
+    <title>Relapse FW | <%= title %></title>
 </head>
 <body>
-    <h1>Sign up</h1>
+     <div class="img-wrapper">
+        <img src="https://i.pinimg.com/736x/56/c7/46/56c7466602acbf957351022994382517.jpg" alt="">
+    </div>
+    <div class="form-wrapper">
+        <form action="/sign-up" method="POST">
+                <h1 class="heading">Ready to Write?</h1>
+                <div>
+                    <h2>Sign-up</h2>
+                    <label for="first_name">First Name: </label>
+                    <input type="text" name="first_name" id="first_name" placeholder="Enter first name"
+                    value="<%= formData.first_name %>" required> <br>
+                    <label for="last_name">Last Name: </label>
+                    <input type="text" name="last_name" id="last_name" placeholder="Enter last name"
+                    value="<%= formData.last_name %>" required> <br>
+                    <label for="username">E-mail: </label>
+                    <input type="email" name="username" id="username" placeholder="Enter e-mail"
+                    value="<%= formData.username %>" required> <br>
+                    <label for="password">Password: </label>
+                    <input type="password" name="password" id="password" placeholder="Enter password"
+                    value="<%= formData.password %>" required> <br>
+                    <label for="re_password">Confirm Password: </label>
+                    <input type="password" name="re_password" id="re_password" placeholder="Re-enter password"
+                    value="<%= formData.re_password %>" required> <br>
+                    <button type="submit">Submit</button> <br>
+                </div>
+                <hr>
+                <small>Already have an account? <a href="/">Log-in</a></small> 
+                <% if (errors && errors.length > 0) {%>
+            <small class="error-wrapper">
+                <p>Error:</p>
+                <ul>
+                    <% errors.forEach(function(error) {%>
+                        <li> <%= error.msg %> </li>
+                    <% }); %>
+                </ul>
+            </small>
+        <% } %>
+        </form>
+        
+    </div>
 </body>
 </html>
