--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./error.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Error! That's not right</h1>
+    <div class="text-wrapper">
+        <h1 class="heading"><b>Whoops! That's not quite right...</b></h1>
+        <p>Either this page doesn't exist or you may be unauthorized to view this content</p>
+        <a href="/"><button>Go back to log-in page</button></a>
+    </div>
 </body>
 </html>
