--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -47,8 +47,12 @@
       <div class="main-content">
         <div class="perks-forms">
           <div class="form-inquiry heading">
-            <b>Want to become a member/admin?</b>
+            <b>Ready to See More with Your Writing?</b>
           </div>
+          <p>
+            Get exclusive perks & privileges such as viewing usernames and
+            deleting messages by entering your membership code below!
+          </p>
           <form action="/member-form" method="POST">
             <label for="member_code">Enter Member Code:</label>
             <input type="text" name="member_code" id="member_code" />
