--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./dashboard.css" />
-    <title>Relapse FW | <%= title %></title>
+    <title>FreeWrite FW | <%= title %></title>
   </head>
   <body>
     <header>
