--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./error.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./error.css" />
+    <title>Error</title>
+  </head>
+  <body>
     <div class="text-wrapper">
-        <h1 class="heading"><b>Whoops! That's not quite right...</b></h1>
-        <p>Either this page doesn't exist or you may be unauthorized to view this content</p>
-        <a href="/"><button>Go back to log-in page</button></a>
+      <h1 class="heading"><b>Whoops! That's not quite right...</b></h1>
+      <p>
+        Either this page doesn't exist or you may be unauthorized to view this
+        content
+      </p>
+      <a href="/"><button>Go back to log-in page</button></a>
     </div>
-</body>
+  </body>
 </html>
